--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -9,7 +9,7 @@
         <link rel="dns-prefetch" href="//cdn.jsdelivr.net" />
         <custom-css />
         <!-- Configuração do Google Analytics para cookies de primeiro nível -->
-        <script>
+        <script data-cfasync="false">
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
@@ -21,9 +21,9 @@
     </head>
     <body class="bg-neutral-50 dark:bg-neutral-900 overflow-x-hidden">
         <div id="app"></div>
-        <script type="module" src="/src/entry-client.ts" async></script>
-        <script type="text/javascript" src="/beacons.min.js" async></script>
-        <script>
+        <script type="module" src="/src/entry-client.ts" async data-cfasync="false"></script>
+        <script type="text/javascript" src="/beacons.min.js" async data-cfasync="false"></script>
+        <script data-cfasync="false">
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
 
