fix: enhance script handling to prevent conflicts with Rocket Loader

--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Desabilitar Rocket Loader do Cloudflare para evitar conflitos com scripts ES6 e SSR -->
+        <script data-cfasync="false">try{var RocketLoader;if(RocketLoader){RocketLoader.on=function(){};}}catch(e){}</script>
         <title>CMMV</title>
         <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
         <link rel="dns-prefetch" href="//fonts.googleapis.com" />
