--- a/apps/web/index.html
+++ b/apps/web/index.html
@@ -3,15 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Desabilitar Rocket Loader do Cloudflare para evitar conflitos com scripts ES6 e SSR -->
-        <script data-cfasync="false">try{var RocketLoader;if(RocketLoader){RocketLoader.on=function(){};}}catch(e){}</script>
         <title>CMMV</title>
         <meta name="robots" content="index, follow, max-snippet:-1, max-video-preview:-1, max-image-preview:large"/>
         <link rel="dns-prefetch" href="//fonts.googleapis.com" />
         <link rel="dns-prefetch" href="//cdn.jsdelivr.net" />
         <custom-css />
         <!-- Configuração do Google Analytics para cookies de primeiro nível -->
-        <script data-cfasync="false">
+        <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
@@ -23,9 +21,9 @@
     </head>
     <body class="bg-neutral-50 dark:bg-neutral-900 overflow-x-hidden">
         <div id="app"></div>
-        <script type="module" src="/src/entry-client.ts" async data-cfasync="false"></script>
-        <script type="text/javascript" src="/beacons.min.js" async data-cfasync="false"></script>
-        <script data-cfasync="false">
+        <script type="module" src="/src/entry-client.ts" async></script>
+        <script type="text/javascript" src="/beacons.min.js" async></script>
+        <script>
             (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
 
